--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <h1>Bookmark Keeper</h1>
+       <!-- Open model -->
+       <h1 id="show-model">Add Bookmark</h1>
 
     <!-- Script -->
     <script src="script.js"></script>
