Building Bookmark UI

--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
 <body>
        <!-- Open model -->
        <h1 id="show-model">Add Bookmark</h1>
+       <!-- Bookmarks -->
+       <div class="container" id="bookmark_container">
+           <div class="item">            
+               <div class="name">
+                   <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
+
+                   <img src="favicon.ico" alt="Favicon">
+                   <a href="http://linkedin.com" target="_blank">Linkedin </a>
+               </div>
+           </div>
+           <div class="item">
+               <div class="name">
+                <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
+
+                   <img src="favicon.ico" alt="Favicon">
+                   <a href="http://linkedin.com" target="_blank">Linkedin </a>
+               </div>
+           </div>
+           <div class="item">
+            <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
+               <div class="name">
+
+                   <img src="favicon.ico" alt="Favicon">
+                   <a href="http://linkedin.com" target="_blank">Linkedin </a>
+               </div>
+           </div>
+       </div>
 
     <!-- Script -->
     <script src="script.js"></script>
