--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-       <!-- Open model -->
-       <h1 id="show-model">Add Bookmark</h1>
+       <!-- Open modal -->
+       <h1 id="show-modal">Add Bookmark</h1>
        <!-- Bookmarks -->
        <div class="container" id="bookmark_container">
            <div class="item">            
@@ -36,6 +36,33 @@
                    <img src="favicon.ico" alt="Favicon">
                    <a href="http://linkedin.com" target="_blank">Linkedin </a>
                </div>
+           </div>
+       </div>
+
+       <!-- modal  -->
+       <div class="modal-container show-modal" id="modal">
+           <div class="modal">
+               <i class="fas fa-times close-icon" id="close-modal"> </i>
+                   <div class="modal-header">
+                      <h3>Add Bookmark</h3> 
+                   </div>
+                   <div class="modal-content">
+                       <form action="" id="bookmark-form">
+                           <!-- Website Name -->
+                           <div class="form-group">
+                               <label for="website-name" class="form-label">Website Name</label>
+                               <input type="text" class="form-input" id="website-name">
+                           </div>
+                           <!-- Website URL -->
+                           <div class="form-group">
+                               <label for="website-url" class="form-label">Website URL</label>
+                               <input type="text" class="form-input" id="website-url">
+                           </div>
+                           <button type="submit">Save</button>
+                       </form>
+                   </div>
+              
+
            </div>
        </div>
 
