--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
        <!-- Bookmarks -->
        <div class="container" id="bookmark_container">
            <div class="item">            
+               <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
                <div class="name">
-                   <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
 
                    <img src="favicon.ico" alt="Favicon">
                    <a href="http://linkedin.com" target="_blank">Linkedin </a>
                </div>
            </div>
            <div class="item">
+               <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
                <div class="name">
-                <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
 
                    <img src="favicon.ico" alt="Favicon">
                    <a href="http://linkedin.com" target="_blank">Linkedin </a>
@@ -40,7 +40,7 @@
        </div>
 
        <!-- modal  -->
-       <div class="modal-container show-modal" id="modal">
+       <div class="modal-container " id="modal">
            <div class="modal">
                <i class="fas fa-times close-icon" id="close-modal"> </i>
                    <div class="modal-header">
